--- a/Projeto Final de POO/README
+++ b/Projeto Final de POO/README
@@ -10,7 +10,7 @@ A pasta Diagrama contem:
 A pasta Rift Armory  contem:
  - O projeto
 
-A pasta Se interessar contem:
+A pasta Bônus contem:
  - uma planilha com os resultado dos
    testes e a descrição de algumas mudanças.
 
